# minesweeper_bot

./: .gitignore  Cargo.toml  README.md
src/: coop_game.rs  game.rs  grid_game.rs  main.rs  mine_field.rs  minesweeper.rs  othello.rs  othello_game.rs
src/minesweeper/: field.rs  game.rs  mod.rs
src/othello/: board.rs  game.rs  mod.rs
