[package]
name = "minesweeper_bot"
version = "0.1.0"
authors = ["Tony Beta Lambda <tonybetalambda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
futures = "*"
tokio = { version = "*", features = ["full"] }
telegram-bot = "*"
