[package]
name = "minesweeper_bot"
version = "0.1.0"
authors = ["Tony Beta Lambda <tonybetalambda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
telegram-bot = { git = "https://github.com/ayrat555/telegram-bot", branch = "ayrat555/api-fixes-10" } 
hyper = "0.13"
hyper-socks2 = "0.5"
